--- a/project.json
+++ b/project.json
@@ -9,10 +9,15 @@
     "GoogleMapsServicesClient.NETStandard": "[1.0.3]",
     "ImageComponents.Core.Imaging": "[4.0.0.2]",
     "ImageComponents.Win32.Imaging": "[4.0.0.2]",
-    "UiPath": "[22.4.42.61951]",
+    "MongoDB.Bson": "[2.17.1]",
+    "MongoDB.Driver": "[2.17.1]",
+    "MongoWebApiStarter": "[7.7.0]",
+    "PostalCodes.Fr": "[1.0.0]",
+    "UiPath": "[22.10.45.28867]",
+    "UiPath.Database.Activities": "[1.7.1]",
     "UiPath.Excel.Activities": "[2.12.3]",
     "UiPath.GoogleVision.Activities": "[1.3.1]",
-    "UiPath.Mail.Activities": "[1.15.2]",
+    "UiPath.Mail.Activities": "[1.18.0]",
     "UiPath.System.Activities": "[22.4.5]",
     "UiPath.Testing.Activities": "[22.4.3]",
     "UiPath.UIAutomation.Activities": "[22.4.7]",
@@ -78,7 +83,7 @@
         "fileName": "TestCase3 Issue.xaml"
       }
     ],
-    "modernBehavior": false
+    "modernBehavior": true
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
