--- a/project.json
+++ b/project.json
@@ -19,6 +19,7 @@
     "UiPath.GoogleVision.Activities": "[1.3.1]",
     "UiPath.Mail.Activities": "[1.18.0]",
     "UiPath.System.Activities": "[22.4.5]",
+    "UiPath.Terminal.Activities": "[2.5.0]",
     "UiPath.Testing.Activities": "[22.4.3]",
     "UiPath.UIAutomation.Activities": "[22.4.7]",
     "UiPath.WebAPI.Activities": "[1.11.2]",
