--- a/project.json
+++ b/project.json
@@ -46,7 +46,8 @@
     "executionType": "Workflow",
     "readyForPiP": false,
     "startsInPiP": false,
-    "mustRestoreAllDependencies": true
+    "mustRestoreAllDependencies": true,
+    "pipType": "ChildSession"
   },
   "designOptions": {
     "projectProfile": "Developement",
@@ -58,32 +59,7 @@
     "processOptions": {
       "ignoredFiles": []
     },
-    "fileInfoCollection": [
-      {
-        "editingStatus": "Publishable",
-        "testCaseId": "34fbc81e-6034-469c-b9ae-e40ef6f8a726",
-        "testCaseType": "TestCase",
-        "fileName": "TC001.xaml"
-      },
-      {
-        "editingStatus": "InProgress",
-        "testCaseId": "ab4cc63b-a33a-4c15-9e39-ac55d2692249",
-        "testCaseType": "TestCase",
-        "fileName": "TestCase.xaml"
-      },
-      {
-        "editingStatus": "Publishable",
-        "testCaseId": "13fec9b6-6c4b-44f7-9109-72cfa1ec31eb",
-        "testCaseType": "TestCase",
-        "fileName": "TestCase2.xaml"
-      },
-      {
-        "editingStatus": "InProgress",
-        "testCaseId": "3b531e28-7ddf-4c62-9874-8e5122210aa6",
-        "testCaseType": "TestCase",
-        "fileName": "TestCase3 Issue.xaml"
-      }
-    ],
+    "fileInfoCollection": [],
     "modernBehavior": false
   },
   "expressionLanguage": "VisualBasic",
